--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Styx</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -24,12 +24,7 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">Syndication</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}/atom.xml">Feed</a>
   </nav>
 
-  <div class="sidebar-item">
-    <p>
-      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
-    </p>
-  </div>
 </div>
