--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -98,20 +98,20 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-bottom: 1px solid #eee;
-  background-color: aquamarine;
+  background-color: #222;
 }
 .masthead-title {
   margin-top: 0;
   margin-bottom: 0;
-  color: #505050;
+  color: #F0F0F0;
 }
 .masthead-title a {
-  color: #505050;
+  color: #F0F0F0;
 }
 .masthead-title small {
   font-size: 75%;
   font-weight: 400;
-  color: #c0c0c0;
+  color: aqua;
   letter-spacing: 0;
 }
 
