--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -330,6 +330,10 @@ a.sidebar-nav-item:focus {
 }
 .post ul {
     background-color: #FDFDFD;
+    font-size: 18px;
+    margin: 1em auto;
+    padding: 1em 2em;
+    border: 1px solid coral;
 }
 
 /* Meta data line below post title */
