--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -328,6 +328,20 @@ a.sidebar-nav-item:focus {
   margin-top: 0;
   background-color: #ddd;
 }
+.post-title {
+  background-image: url("../styx.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  background-color: #ccdde7;
+  background: #3e5f81;
+  box-shadow: 0 1px 4px rgba(0,0,0,.5);
+  text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+}
+.post_date {
+  color: #00a8a8;
+  text-align: right;
+}
 .post ul {
     background-color: #FDFDFD;
     font-size: 18px;
