--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,22 +1,21 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Serendipity Styx Edition -  A reliable, secure and extensible PHP blog | The Better Serendipity Blog System</title>
-  <meta name="description" content="Serendipity Styx Edition is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the full power for professional applications.">
-  <meta name="keywords" content="blog, blog-engine, weblog, Serendipity, Serendipity Styx, Styx Edition, Styx, php, mysql, mysqli, sqlite, postgresql, smarty">
-  <link rel="canonical" href="https://ophian.github.io/styx/">
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
   <title>
     {% if page.title == "Styx" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+  Serendipity Styx Edition -  A reliable, secure and extensible PHP blog | The Better Serendipity Blog System &middot; {{ site.title }}
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="description" content="Serendipity Styx Edition is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the full power for professional applications.">
+  <meta name="keywords" content="blog, blog-engine, weblog, Serendipity, Serendipity Styx, Styx Edition, Styx, php, mysql, mysqli, sqlite, postgresql, smarty">
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="robots" content="index, follow">
 
+  <link rel="canonical" href="https://ophian.github.io/styx/">
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
