--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,6 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
-  <title>
-    {% if page.title == "Styx" %}
-  Serendipity Styx Edition -  A reliable, secure and extensible PHP blog | The Better Serendipity Blog System &middot; {{ site.title }}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
-  </title>
+  <title>{{ site.title }} &middot;  A reliable, secure and extensible PHP blog | The Better Serendipity Blog System | {{ page.title }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="description" content="Serendipity Styx Edition is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the full power for professional applications.">
