--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -180,6 +180,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Sidebar nav */
 .sidebar-nav {
   border-bottom: 1px solid rgba(255,255,255,.1);
+  margin-top: 1.5rem;
 }
 .sidebar-nav-item {
   display: block;
@@ -201,6 +202,9 @@ a.sidebar-nav-item:focus {
   .sidebar-nav-item {
     padding-left:  1.5rem;
     padding-right: 1.5rem;
+  }
+  .sidebar-nav {
+    margin-top: .5rem;
   }
 }
 
