--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,10 @@
+---
+layout: default
+sitemap:
+    priority: 0.7
+    changefreq: 'monthly'
+    lastmod: 2018-03-06T06:00:00-00:00
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
