--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ sitemap:
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
-    <link rel="canonical" href="https://ophian.github.io/"><!-- {{ site.baseurl }} {{ site.url }} {{ site.related_posts.url }} -->
+    <link rel="canonical" href="https://ophian.github.io/"><!-- {{ site.url }}{{ page.url }} -->
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
