--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,16 @@ sitemap:
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Serendipity Styx Edition - Blog Entry | ophian.github.io</title>
+    <title>Serendipity Styx Edition - Blog entry &#8211; {% if page.title %}{{ page.title }}{% endif %} | ophian.github.io</title>
     <meta charset="UTF-8">
     <meta name="description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Serendipity Styx Edition - Blog Entry | Styx is what Serendipity should be | ophian.github.io">
+    <meta property="og:title" content="Serendipity Styx Edition - Blog entry &#8211; {% if page.title %}{{ page.title }}{% endif %} | ophian.github.io">
     <meta property="og:site_name" content="Serendipity Styx Blog System">
     <meta property="og:description" content="Serendipity Styx is a PHP-powered weblog engine giving users an easy way to maintain a blog and developers a framework with the power for professional applications.">
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-    <link rel="canonical" href="{{ site.url }}{{ page.url }}"><!-- {% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }} -->
+    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
