blog: Add piped back tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@ sitemap:
                         <li class="blog-categories__list-item"><a href="/hc/en/" title="Styx Help Center - Documentation" class="icon-docs"><span>⌘</span></a></li>
                     </div>
                 </div>
-                <h1><strong>Serendipity Styx Blog</strong></h1>
+                <h1><strong>Serendipity Styx blog post</strong> <span class="piped-breadcrumb">|</span> <span class="blog-categories__list-item piped-back-tab"><a href="/blog/">All posts</a></span></h1>
                 <div class="blog-post__meta">
                     <span class="date">Posts by&nbsp;<span class="author-name">Ian Styx</span></span>
                 </div>
