--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 layout: default
 sitemap:
     priority: 0.7
-    changefreq: 'monthly'
-    lastmod: 2018-03-06T06:00:00-00:00
+    changefreq: 'weekly'
+    lastmod: 2019-01-02T15:00:00-00:00
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -22,6 +22,7 @@ sitemap:
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
+    {% seo %}
 </head>
 <body>
 <ul class="skip-link__list">
@@ -197,7 +198,7 @@ sitemap:
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2018 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2019 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
