site: Add dark-mode-icon markup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,10 @@ sitemap:
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
 <div class="site-nav site-nav--no-hero menu--tiny">
+    <button id="blink" class="navbar-shader btn float" onclick="dark()" title="Theme: Dark (Browser preferences|Session override)">
+        <i id="dark-mode-icon" class="bi bi-moon-fill"></i>
+        <img id="daynight" src="/i/sun-fill.svg" width="30" height="30" alt="">
+    </button>
     <button class="site-nav__toggler" id="site-nav__toggler" aria-label="Show website navigation" aria-expanded="false" tabindex="1">
         <span class="bar" aria-hidden="true"></span>
         <span class="bar" aria-hidden="true"></span>
