site: Enable default skeleton for lightboxes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: default
 sitemap:
     priority: 1.0
     changefreq: 'weekly'
-    lastmod: 2019-01-02T15:28:00-00:00
+    lastmod: 2021-12-20T14:52:00-00:00
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -217,4 +217,6 @@ sitemap:
 </svg>
 
 <script src="/js/styx.min.js"></script>
+<script> new SimpleLightbox('figure a.lightbox[rel="lightbox"]', { fileExt : 'avif|webp'}); </script>
+
 </body></html>
